# Muscular-training-apparatus

./: .gitignore  README.md
gui/: ui_window-10.h  ui_window-11.h  ui_window-12.h  ui_window-13.h  ui_window-2.h  ui_window-3.h  ui_window-4.h  ui_window-5.h  ui_window-6.h  ui_window-7.h  ui_window-8.h  ui_window-9.h  window-1.ui  window-10.ui  window-11.ui  window-12.ui  window-13.ui  window-2.ui  window-3.ui  window-4.ui  window-5.ui  window-6.ui  window-7.ui  window-8.ui  window-9.ui
gui/res/: res.qrc
src/: CMakeLists.txt  main.cpp  main.hpp
src/kernel/: CMakeLists.txt
src/windows/: common.hpp  mainwindow.cpp  mainwindow.hpp
src/windows/page_10/inc/: page_10.hpp
src/windows/page_10/src/: page_10.cpp
src/windows/page_11/inc/: page_11.hpp
src/windows/page_11/src/: page_11.cpp
src/windows/page_12/inc/: page_12.hpp
src/windows/page_12/src/: page_12.cpp
src/windows/page_13/inc/: page_13.hpp
src/windows/page_13/src/: page_13.cpp
src/windows/page_2/inc/: page_2.hpp
src/windows/page_2/src/: page_2.cpp
src/windows/page_3/inc/: page_3.hpp
src/windows/page_3/src/: page_3.cpp
src/windows/page_4/inc/: page_4.hpp
src/windows/page_4/src/: page_4.cpp
src/windows/page_5/inc/: page_5.hpp
src/windows/page_5/src/: page_5.cpp
src/windows/page_6/inc/: page_6.hpp
src/windows/page_6/src/: page_6.cpp
src/windows/page_7/inc/: page_7.hpp
src/windows/page_7/src/: page_7.cpp
src/windows/page_8/inc/: page_8.hpp
src/windows/page_8/src/: page_8.cpp
src/windows/page_9/inc/: page_9.hpp
src/windows/page_9/src/: page_9.cpp
